// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardHeader should dynamically render content before and after the children 1`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-addon rmd-icon--before"
    >
      <div>
        Before
      </div>
    </span>
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should dynamically render content before and after the children 2`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
    <span
      class="rmd-card__header-addon rmd-icon--after"
    >
      <div>
        After
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should dynamically render content before and after the children 3`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-addon rmd-icon--before"
    >
      <div>
        Before
      </div>
    </span>
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
    <span
      class="rmd-card__header-addon rmd-icon--after"
    >
      <div>
        After
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 1`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 2`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 3`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 4`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 5`] = `
<div>
  <header
    class="rmd-card__header"
  >
    <span
      class="rmd-card__header-content"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;

exports[`CardHeader should render correctly 6`] = `
<div>
  <header
    class="rmd-card__header rmd-card__header--align custom-class-name"
  >
    <span
      class="rmd-card__header-content content-class-name"
    >
      <div>
        Content
      </div>
    </span>
  </header>
</div>
`;
